--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".application.DemoApplication"
+        android:name=".App"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo">
@@ -30,6 +30,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -80,6 +81,7 @@
         <activity android:name=".systemui.SystemUIDemoActivity" />
         <activity android:name=".customview.CustomViewActivity" />
         <activity android:name=".mvp.MvpActivity" />
+        <activity android:name=".compass.CompassActivity"></activity>
     </application>
 
 </manifest>
