--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
         android:name=".App"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo">
         <service android:name=".update.UpdateService" />
@@ -77,11 +77,10 @@
             android:theme="@style/CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".viewpager.ViewPagerDemoActivity" />
-        <activity android:name=".sharedpreference.SPDemoActivity" />
         <activity android:name=".systemui.SystemUIDemoActivity" />
         <activity android:name=".customview.CustomViewActivity" />
         <activity android:name=".mvp.MvpActivity" />
-        <activity android:name=".compass.CompassActivity"></activity>
+        <activity android:name=".compass.CompassActivity"/>
     </application>
 
 </manifest>
